@@ -247,20 +247,6 @@ begin_import
 import|import
 name|org
 operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|lang
-operator|.
-name|StringUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -1301,8 +1287,6 @@ expr_stmt|;
 block|}
 if|else if
 condition|(
-name|StringUtils
-operator|.
 name|isNumeric
 argument_list|(
 name|fetchLimit
@@ -1678,8 +1662,6 @@ expr_stmt|;
 block|}
 if|else if
 condition|(
-name|StringUtils
-operator|.
 name|isNumeric
 argument_list|(
 name|fetchLimit
@@ -4064,6 +4046,68 @@ block|}
 block|}
 return|return
 literal|null
+return|;
+block|}
+specifier|static
+name|boolean
+name|isNumeric
+parameter_list|(
+name|String
+name|str
+parameter_list|)
+block|{
+if|if
+condition|(
+name|str
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|str
+operator|.
+name|length
+argument_list|()
+condition|;
+operator|++
+name|i
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|Character
+operator|.
+name|isDigit
+argument_list|(
+name|str
+operator|.
+name|charAt
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+return|return
+literal|true
 return|;
 block|}
 comment|// sorts ObjEntities so that subentities in inheritance hierarchy are shown
